[package]
name = "mtu-checker"
version = "0.1.0"
edition = "2021"
authors = ["MTU Checker Team"]
description = "Professional MTU checker tool that finds the optimal MTU size by testing ping latency"
license = "MIT"

[[bin]]
name = "mtu-checker"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
] }
surge-ping = "0.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rand = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
